--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "gridcrash",
   "version": "0.1.0",
   "private": true,
+  "description": "This is a simple Tic-Tae-Toe Game",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -34,5 +36,20 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "ajv": "^7.2.4",
+    "cross-env": "^7.0.3",
+    "webpack-cli": "^6.0.1"
+  },
+  "author": "Chandan Kumar",
+  "license": "MIT",
+  "keywords": [
+    "Tic-Tae-Toe",
+    "game",
+    "react",
+    "app",
+    "pwa",
+    "git"
+  ]
 }
