--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
-    "process": "^0.11.10"
+    "process": "^0.11.10",
+    "json-server": "^0.14.2",
+    "react-app-rewire-workbox": "^2.0.1"
   },
   "scripts": {
     "start": "webpack-dev-server --mode development --open",
@@ -58,7 +60,9 @@
     "webpack-dev-server": "^4.15.1",
     "webpack-clean-obsolete-chunks": "^0.4.0",
     "clean-webpack-plugin": "^4.0.0",
-    "compression-webpack-plugin": "^11.1.0"
+    "compression-webpack-plugin": "^11.1.0",
+    "react-app-rewired": "^1.6.2",
+    "workbox-webpack-plugin": "^4.3.1"
   },
   "author": "Chandan Kumar",
   "license": "MIT",
