chore: added context

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -32,5 +32,6 @@
   "theme_color": "#000000",
   "background_color": "#ffffff",
   "scope": "/",
-  "id": "/"
+  "id": "/",
+  "orientation": "portrait-primary"
 }
