--- a/package.json
+++ b/package.json
@@ -9,16 +9,18 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "css-minimizer-webpack-plugin": "^7.0.0",
     "framer-motion": "^10.16.4",
+    "image-webpack-loader": "^8.1.0",
+    "json-server": "^0.14.2",
+    "process": "^0.11.10",
     "react": "^19.0.0",
+    "react-app-rewire-workbox": "^2.0.1",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "process": "^0.11.10",
-    "json-server": "^0.14.2",
-    "react-app-rewire-workbox": "^2.0.1"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "webpack-dev-server --mode development --open",
@@ -45,23 +47,23 @@
     ]
   },
   "devDependencies": {
-    "html-loader": "^5.0.0",
     "@babel/core": "^7.22.15",
     "@babel/preset-env": "^7.22.15",
     "@babel/preset-react": "^7.22.15",
-    "babel-loader": "^9.1.3",
-    "css-loader": "^6.8.1",
-    "html-webpack-plugin": "^5.5.3",
-    "style-loader": "^3.3.3",
     "ajv": "^7.2.4",
-    "cross-env": "^7.0.3",
-    "webpack-cli": "^6.0.1",
-    "webpack": "^5.88.2",
-    "webpack-dev-server": "^4.15.1",
-    "webpack-clean-obsolete-chunks": "^0.4.0",
+    "babel-loader": "^9.1.3",
     "clean-webpack-plugin": "^4.0.0",
     "compression-webpack-plugin": "^11.1.0",
+    "cross-env": "^7.0.3",
+    "css-loader": "^6.8.1",
+    "html-loader": "^5.0.0",
+    "html-webpack-plugin": "^5.5.3",
     "react-app-rewired": "^1.6.2",
+    "style-loader": "^3.3.3",
+    "webpack": "^5.88.2",
+    "webpack-clean-obsolete-chunks": "^0.4.0",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^4.15.1",
     "workbox-webpack-plugin": "^4.3.1"
   },
   "author": "Chandan Kumar",
