--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "jest-fetch-mock": "^3.0.3",
+    "redux-mock-store": "^1.5.5",
+     "papaparse": "^5.4.1"
   },
   "scripts": {
     "start": "webpack-dev-server --mode development --open",
     "build": "webpack --mode production",
-    "test": "react-scripts test",
+    "test": "jest --env=jsdom",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
