--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "css-minimizer-webpack-plugin": "^7.0.0",
     "framer-motion": "^10.16.4",
     "image-webpack-loader": "^8.1.0",
+    "jest-fetch-mock": "^3.0.3",
     "json-server": "^0.14.2",
+    "papaparse": "^5.4.1",
     "process": "^0.11.10",
     "react": "^19.0.0",
     "react-app-rewire-workbox": "^2.0.1",
@@ -20,10 +22,8 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "jest-fetch-mock": "^3.0.3",
     "redux-mock-store": "^1.5.5",
-     "papaparse": "^5.4.1"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "webpack-dev-server --mode development --open",
