--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "html-loader": "^5.0.0",
     "html-webpack-plugin": "^5.5.3",
     "react-app-rewired": "^1.6.2",
+    "rimraf": "^6.0.1",
     "style-loader": "^3.3.3",
     "webpack": "^5.88.2",
     "webpack-clean-obsolete-chunks": "^0.4.0",
