--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "scripts": {
     "start": "webpack-dev-server --mode development --open",
     "build": "webpack --mode production",
+    "winBuild": "set \"GENERATE_SOURCEMAP=false\" && webpack --mode production",
     "test": "jest --env=jsdom",
     "eject": "react-scripts eject"
   },
