--- a/netlify.toml
+++ b/netlify.toml
@@ -7,3 +7,9 @@ status = 200
 from = "/*/*"
 to = "/index.html"
 status = 200
+
+
+[[redirects]]
+  from = "/service-worker.js"
+  to = "/sw.js"
+  status = 200
