--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
     "redux-mock-store": "^1.5.5",
+    "three": "^0.172.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
