--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jest-fetch-mock": "^3.0.3",
     "json-server": "^0.14.2",
     "papaparse": "^5.4.1",
+    "path-browserify": "^1.0.1",
     "process": "^0.11.10",
     "react": "^19.0.0",
     "react-app-rewire-workbox": "^2.0.1",
@@ -24,6 +25,7 @@
     "react-scripts": "5.0.1",
     "redux-mock-store": "^1.5.5",
     "three": "^0.172.0",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -64,6 +66,8 @@
     "css-loader": "^6.8.1",
     "html-loader": "^5.0.0",
     "html-webpack-plugin": "^5.5.3",
+    "jest": "^29.0.0",
+    "jest-environment-jsdom": "^29.7.0",
     "react-app-rewired": "^1.6.2",
     "rimraf": "^6.0.1",
     "style-loader": "^3.3.3",
