--- a/package.json
+++ b/package.json
@@ -29,11 +29,17 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "webpack-dev-server --mode development --open",
-    "build": "cross-env GENERATE_SOURCEMAP=false npm run build",
-    "winBuild": "set \"GENERATE_SOURCEMAP=false\" && webpack --mode production",
-    "test": "jest --env=jsdom",
-    "eject": "react-scripts eject"
+    "start": "webpack-dev-server --mode development --open --hot",
+    "build": "cross-env NODE_ENV=production GENERATE_SOURCEMAP=false webpack --mode production --optimize-minimize",
+    "winBuild": "cross-env NODE_ENV=production set \"GENERATE_SOURCEMAP=false\" && webpack --mode production",
+    "analyze": "webpack-bundle-analyzer dist/stats.json",
+    "test": "jest --env=jsdom --coverage",
+    "eject": "react-scripts eject",
+    "lint": "eslint src/**/*.{js,jsx}",
+    "format": "prettier --write \"src/**/*.{js,jsx,json,css}\"",
+    "serve": "serve -s dist",
+    "clean": "rimraf dist",
+    "prebuild": "npm run clean"
   },
   "eslintConfig": {
     "extends": [
@@ -86,5 +92,12 @@
     "app",
     "pwa",
     "git"
-  ]
+  ],
+  "config": {
+    "compression": "gzip"
+  },
+  "resolutions": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  }
 }
